--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 body {
   margin: 0;
-  padding: 0;
-  background: #F2F4F5;
-  color: #1E1E1F;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  padding: 0 24px;
+  background: #f2f4f5;
+  color: #1e1e1f;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
 #root {
-  margin: 0 24px;
   position: relative;
   min-height: 100vh;
 }
